# live-coding

./: README.md
2020-12-20-grpc-test/: Cargo.toml  README.md  build.rs
2020-12-20-grpc-test/proto/: snoytest.proto
2020-12-20-grpc-test/src/: main.rs
2021-02-05-snoypredict/: Cargo.toml
2021-02-05-snoypredict/src/: lib.rs
2021-02-05-snoypredict/worker/: worker.js
