[package]
name = "grpc-test"
version = "0.1.0"
authors = ["Michael Snoyman <michael@snoyman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.3.1", features = ["tls", "tls-roots", "prost"] }
hyper = "0.13.9"
anyhow = "1.0.36"
tokio = { version = "0.2", features = ["full"] }
prost = "0.6.1"

[build-dependencies]
tonic-build = { version = "0.3.1", features = ["prost"] }
